--- a/react/package.json
+++ b/react/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "prettier-eslint": "^16.3.0",
   }
 }
